feat: add MkDocs documentation system with GitHub Actions
- Add comprehensive MkDocs configuration with Material theme
- Create GitHub Actions workflow for automatic docs deployment
- Add getting started guides (installation, quick start, basic usage)
- Create component guide with examples and best practices
- Add contributing guidelines and changelog
- Include documentation development helper script (docs.sh)
- Set up Python virtual environment with requirements.txt
- Configure automatic deployment to GitHub Pages on main branch pushes

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "build": "vite build",
         "preview": "vite preview --port 5173",
         "test": "vitest run",
-        "test:watch": "vitest"
+        "test:watch": "vitest",
+        "docs:serve": "mkdocs serve",
+        "docs:build": "mkdocs build",
+        "docs:deploy": "mkdocs gh-deploy"
     },
     "devDependencies": {
         "happy-dom": "^18.0.1",
