--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,12 +29,12 @@ jobs:
                   fetch-depth: 0
 
             - name: Setup Python
-              uses: actions/setup-python@v4
+              uses: actions/setup-python@v5
               with:
                   python-version: "3.x"
 
             - name: Cache dependencies
-              uses: actions/cache@v3
+              uses: actions/cache@v4
               with:
                   key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
                   path: ~/.cache/pip
@@ -42,19 +42,16 @@ jobs:
                       ${{ runner.os }}-pip-
 
             - name: Install MkDocs and dependencies
-              run: |
-                  pip install mkdocs
-                  pip install mkdocs-material
-                  pip install mkdocs-awesome-pages-plugin
+              run: pip install -r requirements.txt
 
             - name: Build documentation
               run: mkdocs build --clean
 
             - name: Setup Pages
-              uses: actions/configure-pages@v3
+              uses: actions/configure-pages@v4
 
             - name: Upload artifact
-              uses: actions/upload-pages-artifact@v2
+              uses: actions/upload-pages-artifact@v3
               with:
                   path: ./site
 
@@ -67,4 +64,4 @@ jobs:
         steps:
             - name: Deploy to GitHub Pages
               id: deployment
-              uses: actions/deploy-pages@v2
+              uses: actions/deploy-pages@v4
